--- a/.travis.yml
+++ b/.travis.yml
@@ -10,14 +10,14 @@ before_install:
   - source ~/miniconda3/bin/activate root
   - conda config --set always_yes yes
   - conda update -q conda
-  - conda create -c conda-forge -n pelican-env python feedgenerator>=1.9 jinja2>=2.7 pygments docutils pytz blinker unidecode six>=1.4 python-dateutil pytest coverage
+  - conda create -c conda-forge -n pelican-env python feedgenerator>=1.9 jinja2>=2.7 pygments docutils pytz blinker unidecode six>=1.4 python-dateutil pytest coverage typogrify
   - conda activate pelican-env
   # Pelican has to be installed from the Github source because the test package
   # is not included in the PyPi release.
   - git clone https://github.com/getpelican/pelican.git
   - cd pelican
   - git checkout 4.1.3
-  - python setup.py install
+  - python setup.py develop --no-deps
   - cd -
 install:
   - python setup.py install
@@ -27,4 +27,4 @@ before_script:
 script:
   - set -e
   # run tests on resonance lib
-  - py.test --cov=render_math
+  - py.test --cov="render_math"
