--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ markdown = ["markdown"]
 project-name = "Render Math"
 git-username = "botpub"
 git-email = "botpub@autopub.rocks"
+version-strings = ["pelican/plugins/render_math/version.py"]
 
 [tool.isort]
 # Maintain compatibility with Black
