--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ flake8-black = "^0.1.0"
 invoke = "^1.3"
 isort = "^4.3"
 markdown = "^3.1.1"
-pytest = "^5.0"
+pytest = "~5.3.5"
 pytest-cov = "^2.7"
 pytest-pythonpath = "^0.7.3"
 pytest-sugar = "^0.9.2"
