Ensure Pelican core tests can be imported during CI
Even when Pelican master is installed first, Poetry sometimes seems to
replace it with the version from PyPI (that does not include tests).
Explicitly uninstalling the PyPI version and *then* installing Pelican
master should resolve this.

Hopefully all of this will be unnecessary as soon as Pelican core tests
can be included in package distributions without problems.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         python-version: [3.7]
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v1
         with:
@@ -26,8 +26,9 @@ jobs:
       - name: Install dependencies
         run: |
           poetry run pip install -U pip
-          poetry run pip install -e git://github.com/getpelican/pelican.git#egg=pelican
           poetry install
+          poetry run pip uninstall pelican
+          poetry run pip install -e git://github.com/getpelican/pelican.git#egg=pelican
       - name: Run tests
         run: poetry run invoke tests
       - name: Run linters
