--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           poetry run pip install -U pip
           poetry install
-          poetry run pip uninstall pelican
+          poetry run pip uninstall -y pelican
           poetry run pip install -e git://github.com/getpelican/pelican.git#egg=pelican
       - name: Run tests
         run: poetry run invoke tests
