--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,12 +42,12 @@ markdown = {version = "^3.2.2", optional = true}
 [tool.poetry.dev-dependencies]
 black = {version = "^19.10b0", allow-prereleases = true}
 flake8 = "^3.8"
-flake8-black = "^0.1.0"
+flake8-black = "^0.2.0"
 invoke = "^1.3"
 isort = "^5.4"
 markdown = "^3.2.2"
 pytest = "^6.0"
-pytest-cov = "^2.7"
+pytest-cov = "^2.8"
 pytest-pythonpath = "^0.7.3"
 pytest-sugar = "^0.9.4"
 
@@ -70,6 +70,9 @@ multi_line_output = 3
 
 # Sort imports within their section independent of the import type
 force_sort_within_sections = true
+
+known_pelican = "pelican"
+sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,FIRSTPARTY,LOCALFOLDER"
 
 [build-system]
 requires = ["poetry>=1.0"]
