Update Poetry's build system configuration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,5 +75,5 @@ known_pelican = "pelican"
 sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,FIRSTPARTY,LOCALFOLDER"
 
 [build-system]
-requires = ["poetry>=1.0"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
