--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,13 +18,7 @@ classifiers = [
     "Framework :: Pelican",
     "Framework :: Pelican :: Plugins",
     "Intended Audience :: End Users/Desktop",
-    "License :: OSI Approved :: GNU Affero General Public License v3",
     "Operating System :: OS Independent",
-    "Programming Language :: Python",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.6",
-    "Programming Language :: Python :: 3.7",
-    "Programming Language :: Python :: 3.8",
     "Topic :: Internet :: WWW/HTTP",
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
@@ -34,20 +28,20 @@ classifiers = [
 "Issue Tracker" = "https://github.com/pelican-plugins/sitemap/issues"
 
 [tool.poetry.dependencies]
-python = "^3.6"
-pelican = "^4.5"
+python = ">=3.6.2,<4.0"
+pelican = ">=4.5"
 typogrify = "^2.0.7"
-markdown = {version = "^3.2.2", optional = true}
+markdown = {version = ">=3.2", optional = true}
 
 [tool.poetry.dev-dependencies]
-black = {version = "^19.10b0", allow-prereleases = true}
-flake8 = "^3.8"
-flake8-black = "^0.2.0"
+black = {version = "^21.4b0", allow-prereleases = true}
+flake8 = "^4.0"
+flake8-black = "^0.2"
 invoke = "^1.3"
 isort = "^5.4"
-markdown = "^3.2.2"
+markdown = "^3.2"
 pytest = "^6.0"
-pytest-cov = "^2.8"
+pytest-cov = "^3.0"
 pytest-pythonpath = "^0.7.3"
 pytest-sugar = "^0.9.4"
 
@@ -58,19 +52,18 @@ markdown = ["markdown"]
 project-name = "Render Math"
 git-username = "botpub"
 git-email = "botpub@autopub.rocks"
+append-github-contributor = true
 version-strings = ["pelican/plugins/render_math/version.py"]
 
 [tool.isort]
 # Maintain compatibility with Black
-combine_as_imports = true
-force_grid_wrap = 0
-include_trailing_comma = true
-line_length = 88
+profile = "black"
 multi_line_output = 3
 
 # Sort imports within their section independent of the import type
 force_sort_within_sections = true
 
+# Designate "pelican" as separate import section
 known_pelican = "pelican"
 sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,FIRSTPARTY,LOCALFOLDER"
 
