--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,16 +28,16 @@ classifiers = [
 "Issue Tracker" = "https://github.com/pelican-plugins/sitemap/issues"
 
 [tool.poetry.dependencies]
-python = ">=3.6.2,<4.0"
+python = ">=3.7,<4.0"
 pelican = ">=4.5"
 typogrify = "^2.0.7"
 markdown = {version = ">=3.2", optional = true}
 
 [tool.poetry.dev-dependencies]
-black = {version = "^21.11b0", allow-prereleases = true}
-flake8 = "^4.0"
-flake8-black = "^0.2"
-invoke = "^1.3"
+black = "^23"
+flake8 = "^5.0"
+flake8-black = "^0.3"
+invoke = "^2.0"
 isort = "^5.4"
 markdown = "^3.2"
 pytest = "^6.0"
