--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v2
@@ -52,51 +52,55 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+
       - name: Validate links in Markdown files
         uses: JustinBeckwith/linkinator-action@v1
         with:
           retry: true
+
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.x"
+          python-version: "3.9"
+
       - name: Set Poetry cache
         uses: actions/cache@v2
         id: poetry-cache
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: poetry-${{ hashFiles('**/poetry.lock') }}
-      - name: Upgrade Pip
-        run: python -m pip install --upgrade pip
+
       - name: Install Poetry
         run: python -m pip install poetry
+
       - name: Install dependencies
-        run: |
-          poetry run pip install --upgrade pip
-          poetry install
+        run: poetry install --no-interaction
+
       - name: Run linters
-        run: poetry run invoke lint
+        run: poetry run invoke lint --diff
 
 
   deploy:
     name: Deploy
     needs: [test, lint]
     runs-on: ubuntu-latest
-    if: ${{ github.ref=='refs/heads/main' && github.event_name!='pull_request' }}
+    if: github.ref=='refs/heads/main' && github.event_name!='pull_request'
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.7"
+          python-version: "3.9"
+
       - name: Check release
         id: check_release
         run: |
           python -m pip install --upgrade pip
-          python -m pip install poetry githubrelease httpx==0.16.1 autopub
-          echo "##[set-output name=release;]$(autopub check)"
+          python -m pip install poetry githubrelease httpx==0.18.2 autopub
+          echo "release=$(autopub check)" >> $GITHUB_OUTPUT
       - name: Publish
         if: ${{ steps.check_release.outputs.release=='' }}
         env:
