--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,17 +33,16 @@ pelican = ">=4.5"
 typogrify = "^2.0.7"
 markdown = {version = ">=3.2", optional = true}
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 black = "^23"
 flake8 = "^5.0"
 flake8-black = "^0.3"
-invoke = "^2.0"
-isort = "^5.4"
-markdown = "^3.2"
+invoke = "^2.1"
+isort = "^5.11.5"
+markdown = "^3.4"
 pytest = "^6.0"
 pytest-cov = "^3.0"
-pytest-pythonpath = "^0.7.3"
-pytest-sugar = "^0.9.4"
+pytest-sugar = "^0.9.7"
 
 [tool.poetry.extras]
 markdown = ["markdown"]
