--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,11 +91,25 @@ select = [
 ]
 
 ignore = [
+  "C417",    # unnecessary `map` usage
   "D100",    # missing docstring in public module
+  "D101",    # missing docstring in public class
+  "D102",    # missing docstring in public method
   "D104",    # missing docstring in public package
+  "D107",    # missing docstring in __init__
   "D203",    # blank line before class docstring
   "D213",    # multi-line docstring summary should start at the second line
+  "E501",    # line-length maximum exceeded
   "ISC001",  # disabled so `ruff format` works without warning
+  "PLR0912", # too many branches
+  "PLR0915", # too many statements
+  "PLR1714", # consider merging multiple comparisons
+  "PLR2004", # Magic value used in comparison
+  "PLW2901", # `for` loop variable `value` overwritten by assignment target
+  "T201",    # print statement found
+  "TRY003",  # long messages outside the exception class
+  "TRY301",  # abstract `raise` to an inner function
+  "UP031",   # use format specifiers instead of percent format
 ]
 
 [tool.ruff.lint.isort]
